# odbc-interface

./: .gitignore  build.bat
include/odbc/: logger.hpp  odbc.hpp
src/: CMakeLists.txt  logger.cpp  main.cpp  odbc.cpp  odbc_data.cpp
